@@ -112,6 +112,7 @@
     <phrase id="TECHNICAL_CONTACT">Technical Contact</phrase>
     <phrase id="TERM">Term</phrase>
     <phrase id="THANK_YOU_FOR_YOUR_ORDER">Thank you for your order!</phrase>
+    <phrase id="THERE_ARE_NO_DOMAINS_IN_YOUR_CART">There are no domains in your cart</phrase>
     <phrase id="TRANSFER_DOMAIN">Transfer Domain</phrase>
     <phrase id="TRANSFER_DOMAIN_OPTION">Transfer a domain that you have registered through someone else to us</phrase>
     <phrase id="TRANSFER_DOMAIN_OPTION_TEXT">Use this option to transfer a domain that you already own to us.  Transferring a domain allows you to renew your domain and take advantage of our low-pricing.  If you currently own a domain, it is recommended that you transfer your domain to us, but it is not required.  For more information, see the option below.</phrase>
